Modified projects page to fix a clipping issue on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 .icon
 {
 	display: inline-block;
-	border-radius:32px;
+	border-radius:16px;
 
 }
 
